Added Parallel configuration