@@ -11,13 +11,13 @@
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-java</artifactId>
-			<version>1.2.4</version>
+			<version>1.2.5</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-junit</artifactId>
-			<version>1.2.4</version>
+			<version>1.2.5</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -27,4 +27,96 @@
 			<version>2.53.0</version>
 		</dependency>
 	</dependencies>
+	 
+		  	<build>
+        <plugins>
+	      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <encoding>UTF-8</encoding>
+           <source>1.7</source>
+           <target>1.7</target>
+          <parallel>classes</parallel>
+          <threadCount>4</threadCount>
+        </configuration>
+        <dependencies>
+	      	<dependency>
+	        <groupId>org.apache.maven.surefire</groupId>
+	        <artifactId>surefire-junit47</artifactId>
+	        <version>2.19.1</version>
+	      	</dependency>
+    	</dependencies>
+      </plugin>
+            </plugins>
+    </build>
+ 
+	<!-- 
+	  	<build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14</version>
+                <configuration>
+     				<skip>false</skip>
+   			    </configuration>
+                <executions>
+                    <execution>
+                        <id>acceptance-test</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <skip>false</skip>
+                            <forkCount>3</forkCount>
+                            <reuseForks>false</reuseForks>
+                            <argLine>-Duser.language=en</argLine>
+                            <argLine>-Xmx1024m</argLine>
+                            <argLine>-XX:MaxPermSize=256m</argLine>
+                            <argLine>-Dfile.encoding=UTF-8</argLine>
+                            <useFile>false</useFile>
+                            <includes>
+                                <include>**/*Test.class</include>
+                            </includes>
+                            <testFailureIgnore>true</testFailureIgnore>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+   
+     
+    <build>
+    <plugins>
+
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-failsafe-plugin</artifactId>
+    <version>2.17</version>
+    <configuration>
+        <forkCount>3</forkCount>
+        <reuseForks>true</reuseForks>
+        <<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+         <includes>
+         <include>**/*Test.class</include>
+         </includes>
+    </configuration>
+  </plugin>
+</plugins>
+    </build>
+    -->
 </project>
